test/expected/explain_+o_eq_rck_rk=default-02.out
struct S; struct T; explain S& S::operator=(T const&) = default
            ^
13: error: "default" can be used only for special member functions and relational operators
